# dstats

./: .gitignore  .prettierrc  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json  tsup.config.ts  turbo.json
.github/: FUNDING.yml
apps/api/: Cargo.toml  package.json
apps/api/migrations/: 20260623035146_create_bots.sql  20260623083547_create_guilds.sql  20260623083918_create_bot_guilds.sql  20260623084113_create_events.sql  20260623093054_event_type_enum.sql  20260625124124_uuid_defaults.sql
apps/api/src/: error.rs  main.rs
apps/api/src/database/: connection.rs
apps/api/src/http/: response.rs
apps/api/src/models/: bot_guilds_model.rs  bot_model.rs  events_model.rs  guilds_model.rs  mod.rs
apps/api/src/repositories/: bot_guild_repository.rs  bot_repository.rs  event_repository.rs  guild_repository.rs  mod.rs
apps/api/src/route/: bots.rs  guild.rs  middleware.rs  mod.rs  status.rs
apps/api/src/services/: bot_service.rs  event_service.rs  guild_service.rs  mod.rs
apps/api/src/utils/: mod.rs  parse_snowflake.rs  verify_hcaptcha.rs
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/discord/: page.tsx
apps/web/app/utils/: captcha.tsx  code-block.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sheet.tsx
apps/web/lib/: avatar.tsx  shiki.ts  utils.ts
apps/web/types/: api.ts
playground/: .env.example  index.ts  package.json
(+6 files in other folders)
