[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

axum = "0.8"

sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate"
] }

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

tracing = "0.1"

tracing-subscriber = "0.3"

anyhow = "1"

thiserror = "2"
dotenv = "0.15.0"
